Start layout redesign   - Make header full width   - Fix flexbox issues when viewed on mobile   - Add flexbox properties to main and content scss

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,3 +17,7 @@
   text-align: center;
 }
 
+html {
+  height: 110%;
+  background-color: red;
+}
