--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    max-width: 1200px;
+    width: 100%;
     margin: auto;
   }
 
@@ -24,5 +24,15 @@
     color: whitesmoke;
     text-shadow: 1px 1px rgba($color: #000000, $alpha: 0.7);
   }
+
+
+
+  @media only screen and (max-width: 600px) {
+    &__background {
+      width: 100%;
+    }
+  }
+
+
 
 }
