--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -1,19 +1,12 @@
 .main {
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-flow: column nowrap;
 }
 
 
 @media screen and (min-width: 500px) {
-  .main {
-    height: 90%;
-    max-width: 1100px;
-    box-shadow: 5px 30px 40px -13px rgba(0,0,0,0.75);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 30px;
-    overflow: hidden;
-  }
+
 }
